<resources>
	<string name="app_name">Beach Partner&#8482;</string>
	<string name="welcome">WELCOME!</string>
	<string name="password">Password</string>
	<string name="login">Login</string>
	<string name="forgot_password">Forgot Password?</string>
	<string name="connect_with">Connect with :</string>
	<string name="sign_up">Sign Up</string>
	<string name="first_name">First Name</string>
	<string name="last_name">Last Name</string>
	<string name="date_of_birth">Date of Birth(mm/dd/yyyy)</string>
	<string name="email">Email</string>
	<string name="proceed">Proceed</string>
	<string name="already_have_account_login">Already Have an Account? Log in</string>
	<string name="mobile_number">Mobile Number</string>
	<string name="register">Register</string>
	<string name="gender">Gender</string>
	<string name="male">Male</string>
	<string name="female">Female</string>
	<string name="coach">Coach</string>
	<string name="user_type">User Type</string>
	<string name="invalid_email">Invalid Email</string>
	<string name="invalid_password">Minimum 8 Characters (No spaces at ends)</string>
	<string name="athlete">Athlete</string>
	<string name="state">State</string>
	<string name="invalid_name">Invalid Name</string>
	<string name="invalid_mobile">Invalid Mobile Number</string>
	<string name="invalid_dob">Invalid DOB</string>
	<string name="cancel">Cancel</string>
	<string name="okay">okay</string>
	<string name="format_dob">%1$02d/%2$02d/%3$d</string>
	<string name="select_dob">Select Date of Birth</string>
	<string name="no_internet_connection">No internet connection</string>
	<string name="item_offset_decoration">ItemOffsetDecoration</string>
	<string name="home">Home</string>
	<string name="connections">Connections</string>
	<string name="oops_something_went_wrong">Oops something went wrong</string>
	<string name="thank_you">Thank you</string>
	<string name="for_registering">For Registering!</string>
	<string name="hint_register">Thank you for registering. To complete registration,  please check your email inbox (up to
        10 minutes) and click on the link</string>
	<string name="i_did_not_get_email">I never got the Email</string>
	<string name="return_to_sign_in">Return to Sign In</string>
	<string name="hint_i_did_not_get_email">Please Check your spam folder; email may take as long as 10 minutes to arrive. If after 10 minutes you have not received your email, please  contact us so we can help you.</string>
	<string name="player">Player</string>

	<string name="retry">Retry</string>
	<string name="location">Location</string>
	<string name="venue">Venue</string>
	<string name="event_admin_name">Event Admin Name</string>
	<string name="start_date">Start Date</string>
	<string name="end_date">End Date</string>
	<string name="team_size">Team Size</string>
	<string name="registration_starts_ends">Registration Starts/ Ends</string>
	<string name="invite_partner">Invite Partner</string>
	<string name="view_partner">View Partner</string>
	<string name="i_m_going_for_this_event">I’m going for this event</string>
	<string name="event_date_format">MMM dd, yyyy</string>
	<string name="potential_partners">Potential Partners</string>
	<string name="space_separator">%1$s %2$s</string>
	<string name="invite_friend">Invite Friend</string>
	<string name="block">Block</string>
	<string name="message">Message</string>
	<string name="notes">Notes</string>
	<string name="format_age">Age: %d</string>
	<string name="item_space_decoration">ItemSpaceDecoration</string>
	<string name="event_details">Event Details</string>
	<string name="master_calendar">Master Calendar</string>
	<string name="messaging">Messaging</string>
	<string name="type_a_message">Type a message</string>

	<string name="hello_blank_fragment">Hello blank fragment</string>
	<string name="finder_info_age">Select the age limit you are looking for.</string>
	<string name="finder_info_location">Select the location in which you want to find a player.</string>
	<string name="age_limit">Age Limit</string>
	<string name="min_age">Min</string>
	<string name="max_age">Max</string>
	<string name="show_me">Show me</string>
	<string name="include_coaches">Include Coaches</string>
	<string name="play">Play</string>
	<string name="top_finishes">Top Finishes in Last Year</string>
	<string name="flag_message">Flagged users are reviewed by Beach Partner staff to determine whether they violate the guidelines. Serious or repeated violations can lead to account termination.</string>
	<string name="flag_title">Are you sure you want to Flag </string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="both">Both</string>
	<string name="hyphen">-</string>

	<string name="action_profile">Profile</string>
	<string name="action_subscription">Subscription</string>
	<string name="action_feedback">Feedback</string>
	<string name="action_add_ons">Add ons</string>
	<string name="action_settings">Settings</string>
	<string name="action_help">Help</string>
	<string name="action_logout">Logout</string>
	<string name="editProfile">Edit Profile</string>
	<string name="share">Share</string>
	<string name="birth_date">Birth Date</string>
	<string name="phone">Phone</string>
	<string name="experience_level">Experience Level</string>
	<string name="court_side_preference">Court Side Preference</string>
	<string name="willingness_to_travel">Willingness To Travel</string>
	<string name="high_school_attended">High School Attended</string>
	<string name="indoor_club_played_at">Indoor Club Played at</string>
	<string name="sand_recruits_number">Sand Recruits Number</string>
	<string name="college_beach">College (Beach)</string>
	<string name="no_video_available">No Video available</string>
	<string name="no_video">No video available for this profile</string>
	<string name="no_camera_permission">Permission for using camera is not allowed</string>
	<string name="max_size_image">Please upload an image(max size: 4MB)</string>
	<string name="max_size_video"><![CDATA[Please upload a video(max 30sec & 30MB)]]></string>
	<string name="position">Position</string>
	<string name="height">Height</string>
	<string name="college_indoor">College (Indoor)</string>
	<string name="my_profile">My Profile</string>
	<string name="edit_profile">Edit Profile</string>
	<string name="error_first_name">Please enter your first name</string>
	<string name="error_last_name">Please enter your last name</string>
	<string name="error_mobile">Please enter a valid mobile number</string>
	<string name="college_coach">College Coach</string>
	<string name="college_university">College/University</string>
	<string name="description">Description</string>
	<string name="number_of_athletes">Number of Athletes</string>
	<string name="years_running">Years Running</string>
	<string name="programs_offered">Programs Offered</string>
	<string name="division">Division</string>
	<string name="program_fully_funded">Is Your Program Fully Funded?</string>
	<string name="share_athletes">Does Your Program Share Athletes Between Indoor and Beach</string>
	<string name="upload_error">Upload Failed</string>
	<string name="share_image_error">Please upload an image and then share it</string>
	<string name="search">Search</string>
	<string name="search_connections">Search connections</string>
    <string name="profile_update_success">Successfully updated your details</string>
    <string name="share_video_error">Please upload a video and then share it</string>
    <string name="field_empty_error">This field cannot be empty</string>
    <string name="share_image_via">Share image via...</string>
    <string name="Share_video_via">Share video via</string>
	<string name="profile">Profile</string>
</resources>
