<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">
	<!--<item android:id="@+id/action_profile"-->
	<!--android:title="@string/action_profile"-->
	<!--app:showAsAction="collapseActionView"/>-->

	<item android:id="@+id/action_feedback"
		android:orderInCategory="100"
		android:title="@string/action_feedback"
		app:showAsAction="collapseActionView"/>

	<item android:id="@+id/action_subscription"
		android:orderInCategory="200"
		android:title="Subscription"
		app:showAsAction="collapseActionView"/>

	<item android:id="@+id/action_addOns"
		android:orderInCategory="300"
		android:title="@string/action_add_ons"
		app:showAsAction="collapseActionView"/>

	<item android:id="@+id/action_settings"
		android:orderInCategory="400"
		android:title="@string/action_settings"
		app:showAsAction="collapseActionView"/>

	<item android:id="@+id/action_help"
		android:orderInCategory="500"
		android:title="@string/action_help"
		app:showAsAction="collapseActionView"/>

	<item android:id="@+id/logout"
		android:orderInCategory="600"
		android:title="@string/action_logout"
		app:showAsAction="collapseActionView"/>
</menu>