<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/home_nav"
	app:startDestination="@id/action_chat">

	<fragment
		android:id="@+id/action_home"
		android:name="com.beachpartnerllc.beachpartner.home.AthleteHomeFragment"
		android:label="@string/app_name"
		tools:layout="@layout/fragment_athlete_home"/>

	<fragment
		android:id="@+id/action_connection"
		android:name="com.beachpartnerllc.beachpartner.connection.ConnectionFragment"
		android:label="@string/connections"
		tools:layout="@layout/fragment_connection"/>

	<fragment
		android:id="@+id/action_bp"
		android:name="com.beachpartnerllc.beachpartner.home.Home2Fragment"
		android:label="@string/app_name"
		tools:layout="@layout/fragment_home_2"/>

	<fragment android:id="@+id/action_calendar"
		android:name="com.beachpartnerllc.beachpartner.event.CalendarFragment"
		android:label="Calendar"
		tools:layout="@layout/fragment_calendar">
		<action android:id="@+id/action_master_calendar"
			app:destination="@id/masterCalendarFragment"
			app:enterAnim="@anim/nav_default_enter_anim"
			app:exitAnim="@anim/nav_default_exit_anim"
			app:popEnterAnim="@anim/nav_default_pop_enter_anim"
			app:popExitAnim="@anim/nav_default_pop_exit_anim"
			app:popUpToInclusive="false"/>
	</fragment>

	<fragment
		android:id="@+id/action_chat"
		android:name="com.beachpartnerllc.beachpartner.messaging.ChatFragment"
		android:label="@string/messaging"
		tools:layout="@layout/fragment_chat">

		<action
			android:id="@+id/action_message"
			app:destination="@+id/messageFragment"
			app:enterAnim="@anim/nav_default_enter_anim"
			app:exitAnim="@anim/nav_default_exit_anim"
			app:popEnterAnim="@anim/nav_default_pop_enter_anim"
			app:popExitAnim="@anim/nav_default_pop_exit_anim"/>
	</fragment>

	<action
		android:id="@+id/action_event"
		app:destination="@id/EventFragment"
		app:enterAnim="@anim/nav_default_enter_anim"
		app:exitAnim="@anim/nav_default_exit_anim"
		app:popEnterAnim="@anim/nav_default_pop_enter_anim"
		app:popExitAnim="@anim/nav_default_pop_exit_anim"/>

	<fragment
		android:id="@+id/masterCalendarFragment"
		android:name="com.beachpartnerllc.beachpartner.event.MasterCalendarFragment"
		android:label="@string/master_calendar"
		tools:layout="@layout/fragment_master_calendar">
	</fragment>

	<fragment
		android:id="@+id/EventFragment"
		android:name="com.beachpartnerllc.beachpartner.event.EventFragment"
		android:label="@string/event_details"
		tools:layout="@layout/fragment_event">
		<argument
			android:name="event_id"
			app:argType="integer"/>

		<action android:id="@+id/action_invite"
			app:destination="@id/connectionsFragment"
			app:enterAnim="@anim/nav_default_enter_anim"
			app:exitAnim="@anim/nav_default_exit_anim"
			app:popEnterAnim="@anim/nav_default_pop_enter_anim"
			app:popExitAnim="@anim/nav_default_pop_exit_anim"/>
	</fragment>

	<fragment
		android:id="@+id/connectionsFragment"
		android:name="com.beachpartnerllc.beachpartner.connection.InviteConnectionFragment"
		android:label="Invite Partner"
		tools:layout="@layout/fragment_invite_connection"/>

	<fragment
		android:id="@+id/messageFragment"
		android:name="com.beachpartnerllc.beachpartner.messaging.MessageFragment"
		android:label="MessageFragment"
		tools:layout="@layout/fragment_message">
		<argument
			android:name="chat_id"
			app:argType="string"/>
	</fragment>

</navigation>